--- a/front-vuejs/package.json
+++ b/front-vuejs/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "vue": "^2.2.2",
-    "vue-router": "^2.3.0"
+    "vue-material": "^0.7.1",
+    "vue-router": "^2.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
